--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "video-player": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
