--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
     "video-player": "^0.0.1",
