--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
+    "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "firebase": "^9.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
     "react-player": "^2.11.0",
